Fixes alignment for main buttons

--- a/src/styles/sass/_boxes.sass
+++ b/src/styles/sass/_boxes.sass
@@ -2,7 +2,6 @@
 .set__container
     display: flex
     margin-top: 30px
-    margin-bottom: 50px
 
 .box__selector
     display: flex
