--- a/src/styles/sass/_buttons.sass
+++ b/src/styles/sass/_buttons.sass
@@ -8,7 +8,6 @@
     @extend .display_font
     width: 60%
     height: 60px
-    margin-top: 20px
     font-size: 2.2em
     background-color: $darkGreen
     color: $white
